updated entities, strategies, items, added child and abstract entity