@@ -43,49 +43,48 @@ public class Observer {
     }
 
     public void handleDeviceReport(Device device){
-//        device.generateReportForDay();
-        //generate task for adult
+        //generate report: used times, electricity used, etc.
         Adult.addTask(device);
     }
 
     public void handleSportReport(SportEquipment equipment){
-        //generate task for adult
+        //generate report: used times, electricity used, etc.
     }
 
-    public Device getFreeDevice(LivingEntity entity){
-        List<Device> freeDevices = null;
-        if(entity.getType()== EntityType.DOG || entity.getType()== EntityType.CAT){
-            freeDevices = devices.stream()
-                    .filter(device -> device.getCurrentState().getType() == StateType.IDLE).filter(device -> !device.isForHuman())
-                    .collect(Collectors.toList());
-        }else{
-            freeDevices = devices.stream()
-                    .filter(device -> device.getCurrentState().getType() == StateType.IDLE).filter(Device::isForHuman)
-                    .collect(Collectors.toList());
-            List<Device> nearestDevices = freeDevices.stream().filter(d -> d.getCurrentRoom()==entity.getCurrentRoom()).toList();
-            if(!nearestDevices.isEmpty()){
-                freeDevices = nearestDevices;
-            }
-        }
-        if (freeDevices.isEmpty()) {
-            return null;
-        }
+//    public Device getFreeDevice(LivingEntity entity){
+//        List<Device> freeDevices = null;
+//        if(entity.getType()== EntityType.DOG || entity.getType()== EntityType.CAT){
+//            freeDevices = devices.stream()
+//                    .filter(device -> device.getCurrentState().getType() == StateType.IDLE).filter(device -> !device.isForHuman())
+//                    .collect(Collectors.toList());
+//        }else{
+//            freeDevices = devices.stream()
+//                    .filter(device -> device.getCurrentState().getType() == StateType.IDLE).filter(Device::isForHuman)
+//                    .collect(Collectors.toList());
+//            List<Device> nearestDevices = freeDevices.stream().filter(d -> d.getCurrentRoom()==entity.getCurrentRoom()).toList();
+//            if(!nearestDevices.isEmpty()){
+//                freeDevices = nearestDevices;
+//            }
+//        }
+//        if (freeDevices.isEmpty()) {
+//            return null;
+//        }
+//
+//        int randomIndexOfList = new Random().nextInt(freeDevices.size());
+//        return freeDevices.get(randomIndexOfList);
+//    }
 
-        int randomIndexOfList = new Random().nextInt(freeDevices.size());
-        return freeDevices.get(randomIndexOfList);
-    }
-
-    public SportEquipment getFreeSport(){
-        List<SportEquipment> freeSports = sports.stream()
-                .filter(sport -> sport.getCurrentState().getType() == StateType.IDLE)
-                .collect(Collectors.toList());
-        if (freeSports.isEmpty()) {
-            return null;
-        }
-
-        int randomIndexOfList = new Random().nextInt(freeSports.size());
-        return freeSports.get(randomIndexOfList);
-    }
+//    public SportEquipment getFreeSport(){
+//        List<SportEquipment> freeSports = sports.stream()
+//                .filter(sport -> sport.getCurrentState().getType() == StateType.IDLE)
+//                .collect(Collectors.toList());
+//        if (freeSports.isEmpty()) {
+//            return null;
+//        }
+//
+//        int randomIndexOfList = new Random().nextInt(freeSports.size());
+//        return freeSports.get(randomIndexOfList);
+//    }
 
     public void handleSensorReport(Sensor sensor){
         if(sensor.isAlarmMode()){
@@ -93,6 +92,7 @@ public class Observer {
         }
         else if(sensor.getCurrentState().getType() == StateType.BROKEN){
             //add task to adult
+            Adult.addTask(sensor);
         }else{
 //            sensor.getElectricityUsed();
             sensor.generateReportForDay();
